# skene-growth

./: .gitignore  .skene-growth.config  CHANGELOG.md  CONTEXT_SYNTHESIS_IMPLEMENTATION.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  ONBOARDING_50_PATTERNS.md  PUBLISHING.md  README.md  RELEASING.md  SELF_ANALYSIS_REPORT.md  SPEC.md  TODO.md  pyproject.toml  skene-growth-plan.json  test_context_synthesis.py
.cursor-plugin/: marketplace.json
.cursor/rules/: go-code-style.mdc  go-constants-pattern.mdc  go-tui-architecture.mdc  go-tui-conventions.mdc  skene-constants.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/translations/: README.ar.md  README.bn.md  README.br.md  README.bs.md  README.da.md  README.de.md  README.es.md  README.fi.md  README.fr.md  README.gr.md  README.it.md  README.ja.md  README.ko.md  README.no.md  README.pl.md  README.ru.md  README.sv.md  README.th.md  README.tr.md  README.uk.md  README.vi.md  README.zh.md  README.zht.md
.github/workflows/: ci.yml  publish.yml  tui-release.yml
benchmarks/: README.md  config-flagship-models.toml  config.toml  run.py
benchmarks/evaluation/: factual.py  ground_truth.py  llm_judge.py  models.py  report.py  structural.py
benchmarks/ground_truth/: CLAUDE.md  calcom.toml  (+5 more)
cursor-plugin/: CHANGELOG.md  README.md
docs/: INTEGRATION.md  index.md  llms.txt  local-llm.md  onboarding-audit.md  troubleshooting.md
skene-context/: growth-manifest.json  growth-manifest.md  growth-objectives.md  growth-template.json  growth-template.md  product-docs.md  skene-growth-plan.md
skene-db/: README.md
skene-docs/: context.md  product-docs.md
skills/: README.md  SKILL.md  package.json  setup.js
tests/: __init__.py  conftest.py  test_config.py  test_engine_generator.py  test_engine_storage.py  test_feature_registry.py  test_output_paths.py  test_progress.py
tui/: .air.toml  Makefile  README.md  go.mod  go.sum
(+410 files in other folders)
