[project]
name = "skene"
version = "0.4.0rc3"
description = "PLG analysis toolkit for codebases - analyze code, detect growth opportunities, generate documentation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4"
authors = [
    { name = "Skene Technologies" }
]
keywords = ["plg", "growth", "codebase", "analysis", "documentation", "llm", "ai-tools", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "aiofiles>=24.0",
    "loguru>=0.7.0",
    "jinja2>=3.0",
    "typer>=0.12",
    "rich>=13.0",
    "google-genai>=1.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "tree-sitter>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
]

[project.optional-dependencies]
ui = [
    "questionary>=2.0",
]

[project.scripts]
skene = "skene.cli.app:skene_entry_point"
skene-growth = "skene.cli.app:skene_growth_entry"

[project.urls]
Homepage = "https://www.skene.ai"
Documentation = "https://www.skene.ai/resources/docs/skene"
Repository = "https://github.com/SkeneTechnologies/skene"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skene"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
